Fix gap & comment

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   justify-content: center;
   padding: 50px 170px;
-  gap: 30px;
+  gap: 35px;
 }
 
 .footer__tel {
